RESOLVED FIXED14513
[CAIRO] Animated GIF support is broken
https://bugs.webkit.org/show_bug.cgi?id=14513
Summary [CAIRO] Animated GIF support is broken
Alp Toker
Reported 2007-07-03 11:03:28 PDT
Animated GIFs often load as just noise, and do not animate.
Attachments
Enable animated GIFs (1.76 KB, patch)
2007-07-03 11:13 PDT, Alp Toker
mrowe: review+
Alp Toker
Comment 1 2007-07-03 11:13:31 PDT
Created attachment 15369 [details] Enable animated GIFs
Mark Rowe (bdash)
Comment 2 2007-07-05 06:45:22 PDT
Landed in r24014.
Note You need to log in before you can comment on or make changes to this bug.