2007-07-05  Alp Toker  <alp.toker@collabora.co.uk>

Reviewed by Mark Rowe.

        http://bugs.webkit.org/show_bug.cgi?id=14513
        Cairo animated GIF support is broken

        Implement ImageSource::frameIsCompleteAtIndex() to enable animated GIFs.

        * platform/graphics/cairo/ImageSourceCairo.cpp:
        (WebCore::ImageSource::frameIsCompleteAtIndex):


Canonical link: https://commits.webkit.org/18756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24014 268f45cc-cd09-0410-ab3c-d52691b4dbfc